Ensure that information is not lost on narrow screens.  Fix for #48

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -45,6 +45,7 @@ div, a, li {
   padding-top: 48px;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
+  box-sizing: border-box;
 }
 
 .page {
