--- a/src/less/header.less
+++ b/src/less/header.less
@@ -25,6 +25,7 @@ header {
   left: 0px;
   width: 100%;
   z-index: 2;
+  box-sizing: border-box;
   .user-select-none();
 
   .menu {
